# eventwatchd

./: .frlog  .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
debian/: README  autogen.sh  changelog  control  rules
scripts/: eventwatchd
src/: eventwatchd.pl
